--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+main {
+    display: flex;
+    gap: 10px;
+}
+body {  
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
 
     --primary-text-color: #181820;
@@ -15,7 +18,9 @@ body {
     --border-color: #edb7ea;
     --text-decoration-color: #c84cc1;
 }
-
+.wrapper {
+    margin-top: 50px;
+}
 .container {
     margin: 0 auto;
     padding: 0 30px;
@@ -35,7 +40,7 @@ body {
 }
 
 .resume {
-    margin: 50px auto;
+    margin: 50px 80px auto;
     border: 1px solid #f5f5f5;
     box-shadow: 1px 1px 7px 7px #f5f5f5;
     padding: 30px 0;
@@ -125,12 +130,10 @@ body {
 
   .contact-info__avatar {
       
-      width: 150px;
-      height: 150px;
-      object-fit: contain;
-      
+      width: 350px;
+      height: 350px;
+      object-fit: contain;     
       border-color: var(--text-decoration-color);
-      margin-left: 55px;
   }
 
   .intro {
@@ -167,7 +170,7 @@ body {
 
 .skills__text {
     color: var(--secondary-text-color);
-    text-align: justify;
+    text-align: center;
 }
 
 .experiences {
@@ -191,15 +194,16 @@ body {
 .experiences__company-header-name {
     color: var(--primary-text-color);
     text-decoration-color: var(--text-decoration-color);
-    text-decoration-line: underline;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .experiences__company-project {
     margin-left: 15px;
+    margin-top: 20px;
     margin-bottom: 25px;
 }
+
 
 .experiences__company-project-role {
     color: var(--durability-text-color);
@@ -217,6 +221,16 @@ body {
 .experiences__company-project-responsibilities {
     color: var(--secondary-text-color);
     padding-left: 20px;
+    list-style: none;
+}
+
+.experiences__company-project-responsibilities li::before {
+    content: "\2022";  
+    color: #c84cc1; 
+    font-weight: bold; 
+    display: inline-block; 
+    width: 1em; 
+    margin-left: -1em; 
 }
 
 .additional-info {
@@ -262,4 +276,39 @@ body {
 
 .additional-info__languages-item {
     color: var(--secondary-text-color);
+}
+
+.projects_list {
+    padding: 0;
+    margin-left: 15px;
+}
+.project_item {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.project, .project_link {
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    color: #595959;
+}
+.project_link { 
+    margin-left: 10px;
+}
+
+.project_link { 
+    margin-left: 10px;
+}
+.project_bracket {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+    display: inline-block;
+    margin: 0 10px;
 }
