--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ body {
     text-align: justify;
 }
 
-.skills__header {
+.skills__header,.achievements,.hobbies,.timeline {
     color: var(--secondary-text-color);
     text-align: center;
     margin-bottom: 15px;
@@ -205,6 +205,10 @@ body {
     margin-bottom: 25px;
 }
 
+.timeline-events {
+    margin-left: 15px;
+    margin-top: 20px;
+}
 
 .experiences__company-project-role {
     color: var(--durability-text-color);
@@ -219,7 +223,7 @@ body {
     margin-bottom: 10px;
 }
 
-.experiences__company-project-responsibilities {
+.experiences__company-project-responsibilities,.timeline-events-milestones,.hobbies-responsibilities {
     color: var(--secondary-text-color);
     padding-left: 20px;
     list-style: none;
